# PythonistaChallenges

./: README.md  pyproject.toml
2023/02/: README.md  crack.py  crack_one_liner.py
2023/03/: README.md  minesweeper.py  minesweeper_one_liner.py
2023/06/: README.md  executions.py
2023/11/: README.md  tapcode.py
2023/12/: README.md  condensed_submission.py  input.txt  map.py  submission.py
2024/01/: README.md  clock.py  one_line_submission.py  submission.py
2024/02/: README.md  bomb.py  submission.py
2024/03/: README.md  conftest.py  sudoku.py  test.py  test_cases.json
2024/03/solutions/: backtracking.py  csp.py
2024/03/tests/: _test.py  test_cases.json
2024/04/: README.md  main.py
2024/04/tests/: _test.py  test_cases.json
2024/05/: README.md  main.py
2024/05/tests/: _test.py  conftest.py  find_seats_test.py  find_seats_test_cases.json  optimal_seats_test.py  optimal_seats_test_cases.json
2024/06/: README.md  main.py  test.py  test_cases.json
2024/06/tests/: _test.py  test_cases.json
2024/07/: README.md  main.py  test.py  test_cases.json
2024/08/: README.md  advanced_test_cases.json  main.py  test.py  test_cases.json
2024/09/: README.md  main.py  test.py  test_cases.json
2024/11/: README.md  countdown.py  main.py  test.py  test_cases.json
template/: test.py
template/tests/: _test.py  test_cases.json
