[project]
name = "Pythonista-Challenges"
version = "0.1.0"
requires-python = ">=3.11"
readme = "README.md"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN101",   # missing-type-self
    "B905",     # zip-without-explicit-strict
    "C901",     # complex-structure
    "COM812",   # missing-trailing-comma
    "COM819",   # prohibited-trailing-comma
    "D1",       # missing-docstrings
    "D206",     # indent-with-spaces
    "D300",     # triple-single-quotes
    "E111",     # indentation-with-invalid-multiple
    "E114",     # indentation-with-invalid-multiple-comment
    "E117",     # over-indented
    "E501",     # line-too-long
    "ERA001",   # commented-out-code
    "INP001",   # implicit-namespace-package
    "ISC001",   # single-line-implicit-string-concatenation
    "ISC002",   # multi-line-implicit-string-concatenation
    "Q000",     # bad-quotes-inline-string
    "Q001",     # bad-quotes-multiline-string
    "Q002",     # bad-quotes-docstring
    "Q003",     # avoidable-escaped-quote
    "W191",     # tab-indentation
]

[tool.ruff.lint.per-file-ignores]
"*test*.py" = [
    "ARG001",   # unused-function-argument
    "PLW0603",  # global-statement
    "S101",     # assert
    "T201",     # print
    "TID252",   # relative-imports
]

[tool.ruff.format]
docstring-code-format = true